# bash-util

./: .PACKAGE_NAME  .gitignore  CHANGELOG  Makefile.am  README.md  bootstrap  configure.ac
dev/docker-images/app/: Dockerfile
dev/docker-images/runner/: Dockerfile
dev/scripts/run/: build  test
docs/: README.md
src/: bash-util-loader.bash.in  bash-util.bash.in  bash-util.pc.in
src/components/: common.bash  importer.bash
src/components/core/: bool.bash  code.bash  command.bash  datetime.bash  dict.bash  int.bash  list.bash  log.bash  string.bash  type.bash  var.bash
src/components/core/args/: api.bash  constants.bash  helpers.bash
src/components/core/args/parser_core/: _get_values.bash  _parse_known_args.bash  _parse_option.bash
tests/install/: test
tests/it/core/args/: extra_unrecognized_arguments.test  multiple_mixed_arguments.test  multiple_option_arguments.test  multiple_positional_arguments.test  option_argument_actions.test  option_argument_choices.test  option_argument_const.test  option_argument_default.test  option_argument_nargs.test  option_argument_required.test  option_argument_types.test  positional_argument_actions.test  positional_argument_choices.test  positional_argument_default.test  positional_argument_nargs.test  positional_argument_required.test  positional_argument_types.test
tests/lib/: common.bash
tests/ut/: template
tests/ut/core/args/: _action_is_valid.test  _nargs_is_valid.test  _type_is_supported.test
tests/ut/core/args/option/: _option_long_name_is_valid.test  _option_short_name_is_valid.test  add_option.test  get_option_value.test  get_option_value_type.test  option_exists.test  set_option_action.test  set_option_choices.test  set_option_const.test  set_option_default.test  set_option_long_name.test  set_option_nargs.test  set_option_required.test  set_option_short_name.test  set_option_type.test
tests/ut/core/args/parser/: _parse_option.test  create_parser.test  get_extras_value.test  parser_does_not_exist.test  parser_exists.test
tests/ut/core/args/positional/: add_positional.test  get_positional_value.test  get_positional_value_type.test  positional_exists.test  set_positional_action.test  set_positional_choices.test  set_positional_const.test  set_positional_default.test  set_positional_nargs.test  set_positional_type.test
tests/ut/core/bool/: assign.test  clone_value.test  convert_from_exit_code.test  convert_to_exit_code.test  destroy.test  equals.test  exists.test  is_false.test  is_true.test  is_valid.test  print_false.test  print_true.test  print_value.test  value_is_false.test  value_is_true.test  value_is_valid.test
tests/ut/core/command/: reset.test
tests/ut/core/command/status/: get_status.test  set_status.test
tests/ut/core/command/stderr/: get_stderr_type.test  get_stderr_value.test  set_stderr_type.test  set_stderr_value.test
tests/ut/core/command/stdout/: get_stdout_type.test  get_stdout_value.test  set_stdout_type.test  set_stdout_value.test
tests/ut/core/dict/: add_key.test  clone.test  clone_all_keys.test  clone_key.test  count.test  create.test  destroy.test  exists.test  get_key_type.test  get_key_value.test  get_keys_indices.test  get_keys_list.test  has_key.test  is_valid.test  key_does_not_exist.test  key_exists.test  key_is_type.test  key_value_is_set.test  keys.test  remove_all_keys.test  remove_key.test  set_key_type.test  set_key_value.test
tests/ut/core/int/: assign.test  clone_value.test  destroy.test  equals.test  exists.test  is_valid.test  max_value.test  min_value.test  print_value.test  value_is_valid.test
tests/ut/core/list/: append.test  assign.test  clone.test  clone_all_elements.test  contains.test  copy.test  create.test  destroy.test  equals.test  exists.test  extend.test  get_element_value.test  get_max_index.test  get_min_index.test  get_value_count.test  get_value_index.test  get_value_indices.test  indices.test  is_valid.test  length.test  next_available_index.test  remove_all_value.test  remove_element.test  remove_value.test  set_element_value.test  to_string.test
tests/ut/core/log/: colorize_message.test  decorate_message.test  message_type_valid.test  print_message.test  read_message_lines.test
tests/ut/core/string/: append.test  assign.test  clone_value.test  destroy.test  equals.test  exists.test  is_not_null.test  is_null.test  is_valid.test  not_equals.test  print_value.test  sanitize.test
tests/ut/core/type/: clone_value.test  destroy_type.test  destroy_value.test  get_type.test  get_value.test  is_valid.test  set_type.test  set_value.test  value_is_set.test  value_is_valid.test
tests/ut/core/var/: destroy.test  is_set.test  is_unset.test  is_valid.test  name_is_valid.test  names_do_not_conflict.test  print_name.test
